--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .bg-behind {
-  background: linear-gradient(rgba(0,0,0,.3), rgba(27,37,47)), url(https://gamezero.id/wp-content/uploads/2022/07/Anniv.jpg) center center / cover no-repeat ;
+  background: linear-gradient(rgba(0,0,0,.3), rgba(27,37,47)), url(https://storage.googleapis.com/pgoblog/posts/anniversaryposter2019.jpg) center center / cover no-repeat ;
 }
 
 #disabledToggle{
